# RWAOS

./: .gitignore  README.md  backend-smartcontract-implementation-plan.md  confidential-rwa-os-blueprint.md  docker-compose.yml  feedback.md
backend/: Cargo.toml  DOCKER_NOTES.md  Dockerfile  README.md
backend/src/: asset_registry.rs  audit_reporting.rs  compliance_passports.rs  config.rs  db.rs  disclosure_mgmt.rs  health.rs  identity_access.rs  investor_registry.rs  lib.rs  main.rs  tenant_contracts.rs  transfer_ops.rs
backend/tests/: integration_routes.rs
contracts/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/contracts/: AuditAnchor.sol  ConfidentialRWAToken.sol  DisclosureRegistry.sol  SettlementVault.sol  TenantFactory.sol  TransferController.sol
contracts/deployments/: arbitrumSepolia.json  mockUsdt.arbitrumSepolia.json  onchain-proof-latest.json  tenantFactory.arbitrumSepolia.json
contracts/scripts/: debug-controller-revert.ts  demo-flow.ts  deploy.ts  (+6 more)
docs/: business-flow-proof.md  dorahacks-form-answers.md  dorahacks-submission-strategy.md  e2e-proof.md  hackathon-requirements-scan.md  iexec-vibe-coding-challenge.md  judge-proof-pack.md  nox-confidential-token-4-minute-video-script.md  onchain-proof.md  repo-compliance-scan.md  runtime-proof.md  submission-pack.md  video-script.md
frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
stitch_minimalist_professional_landing_page/: confidential_rwa_os_12_pages_uiux_spec.md
(+91 files in other folders)
