[package]
name = "confidential_rwa_os_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
ethers-core = "2"
http = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
