[package]
name = "confidential_rwa_os_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
base64 = "0.22"
ethers-core = "2"
hmac = "0.12"
http = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

[dev-dependencies]
ethers-signers = "2"
tower = { version = "0.5", features = ["util"] }
